layout and bleeding css fixes, only the worst ones (there's still A LOT to do here)

--- a/src/components/MentorsList/MentorsList.css
+++ b/src/components/MentorsList/MentorsList.css
@@ -14,14 +14,6 @@ li.mentorcontainer > div {
   align-items: center;
 }
 
-h1 {
-  text-align: center;
-  margin: 3%;
-  text-decoration: underline;
-  text-decoration-color: #ffc53d;
-  text-underline-position: under;
-}
-
 .actions {
   display: flex;
   justify-content: center;
