--- a/src/components/TitledContainer/titledContainer.css
+++ b/src/components/TitledContainer/titledContainer.css
@@ -1,6 +1,6 @@
-.sample-component {
-  margin: auto 0;
-  width: 30%;
+.titled-container {
+  width: 100%;
+  height: 100%;
 }
 
 .pagetitle {
